# gitlurker-nostr

./: .env.example  .gitignore  LICENSE  README.md
backend/: README.md  pyproject.toml
backend/fixtures/: dev_api_samples.json  seed_projects.json
backend/src/gitlurker/: __init__.py  config.py  github_url.py  main.py
backend/src/gitlurker/api/: routes.py
backend/src/gitlurker/models/: schemas.py
backend/src/gitlurker/scripts/: __init__.py  seed.py
backend/src/gitlurker/services/: __init__.py  github.py  nostr.py  scheduler.py
backend/tests/: conftest.py  test_api.py  test_config.py  test_github.py  test_github_url.py  test_integration.py  test_nostr.py  test_scheduler.py  test_schemas.py  test_seed.py
docs/: DEV_ENVIRONMENT.md
frontend/: package-lock.json  package.json  playwright.config.js  vite.config.js  vitest.config.js
frontend/scripts/: extract-btc-icons.mjs
frontend/src/: index.html
frontend/src/css/: styles.css
frontend/src/js/: app.js  auth.js  btcOutlineSvgs.generated.js  config.js  customIcons.js  devDummyProjects.js  filters.js  filters.test.js  icons.js  meta.js  nostr.js  parse.js  parse.test.js  state.js  utils.js  utils.test.js
frontend/src/js/components/: categoryTabs.js  homeLegends.js  homeLegends.test.js  loadingSkeleton.js  loadingSkeleton.test.js  mobileNav.js  projectTable.js  projectTable.test.js  searchBar.js  themeToggle.js  themeToggle.test.js
frontend/src/js/views/: about.js  home.js  owner.js  release.js  repo.js
frontend/tests/e2e/: basic.spec.js  flows.spec.js
